--- a/src/app/get-drunk/components/category/category.component.html
+++ b/src/app/get-drunk/components/category/category.component.html
@@ -1,1 +1,11 @@
-<p>category works!</p>,
+<h3 class="text-white mt-3 h3">
+  Results for the category: "{{ categoryName }}"
+</h3>
+<div class="row p-4">
+  <div
+    *ngFor="let drink of drinks"
+    class="col-md-3 col-sm-6 align-items-center"
+  >
+    <get-drunk-drink-card [drink]="drink"></get-drunk-drink-card>
+  </div>
+</div>
